# aoc-2024

./: .gitignore  README.md  pyproject.toml
aoc_2024/: main.py
aoc_2024/days/day1/: part1.py  part2.py
aoc_2024/days/day2/: part1.py  part2.py
aoc_2024/days/day3/: part1.py  part2.py
aoc_2024/days/day4/: part1.py  part2.py
aoc_2024/days/day5/: part1.py  part2.py
